# Movies-Data-Analysis

./: .env.example  .gitignore  Dockerfile  README.md  app.py  boot.bat  boot.sh  entrypoint.sh  main.py  main_v1.py  main_v2.py  pyproject.toml  requirements-freeze.txt  requirements.txt
.github/workflows/: dockerhub_deploy.yml
api/: __init__.py  config.py
api/analysis/: __init__.py  analysisController.py  analysisService.py
api/controller/: analysis.py  predict.py  probe.py
api/controllers/: analysis.py  predict.py  probe.py  query.py
api/extensions/: db.py  swagger.py
api/predict/: __init__.py  predictController.py  predictService.py
api/probe/: __init__.py  probeController.py  probeService.py
api/query/: __init__.py  queryController.py  queryService.py
api/routers/: analysis.py  probe.py  query.py  rag.py
api/services/: analysis.py  dbclient.py  inference.py  predict.py  probe.py  query.py  rag_service.py
api/utils/: config.py
api/v1/: app.py  config.py
api/v2/: app.py  common.py
instance/: movies.db
interfaces/: __init__.py  transformer_helper.py
notebooks/: google_tapas.py  google_tapex.py  gpt2_text_gen.py  hugging_face_text_gen.py  inference.py  microsoft_tapex.py  training.py
tests/: __init__.py  test_analysis.py  test_analysis_controller.py  test_analysis_service.py  test_inference_controller.py  test_inference_service.py  test_predict_controller.py  test_predict_service.py  test_probe_controller.py  test_probe_service.py  test_query.py  test_query_controller.py  test_query_service.py
tests/v1/: __init__.py  (+6 more)
(+28 files in other folders)
