[project]
name = "Movies-Data-Analysis"
version = "0.1.0"
description = "My awesome Python project"
dependencies = [
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
api-v1-deps = [
    "datasets>=4.0.0",
    "flasgger>=0.9.7.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-sqlalchemy>=3.1.1",
    "pandas>=2.3.2",
    "peft>=0.18.0",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]
api-v2-deps = [
    "datasets>=4.0.0",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "ollama>=0.5.4",
    "uvicorn>=0.35.0",
]
